2004-12-21  John Finlay  <finlay@moeraki.com>

	* pygtk-gtktoolbar.xml (set_style) Add a note about ToolItem label
	display when style is TOOLBAR_BOTH_HORIZ. (Gian Mario Tagliaretti)

2004-12-10  John Finlay  <finlay@moeraki.com>

	* pygtk-gtksettings.xml (Description): Change description to indicate
	that there is one Settings object per GdkScreen (Rafael Villar Burke)

2004-12-09  John Finlay  <finlay@moeraki.com>

	* pygtk-gtk-stock-items.xml (gtk.stock_add): Add reference to
	Modifier Constants docs.

2004-12-07  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkwindow.xml (move): Fix example code.
	Fixes #160678. (Gian Mario Tagliaretti)

	* pygtk-gtkwindow.xml (set_type_hint): Add reference to window type 
	hint constants. Fixes #160669 (Gian Mario Tagliaretti)
	(set_gravity, begin_resize_drag): Add reference to constants.

2004-12-06  John Finlay  <finlay@moeraki.com>

	* pygtk-gtk-stock-items.xml Remove duplicate STOCK_WARNING.
	Fixes #160584 (Erik Grinaker).
	Add GTK+ 2.6 stock icons.

2004-12-04  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkdialog.xml (set_alternative_button_order): Add.

	* pygtk-pangolayoutiter.xml Add.

	* pygtk-pangolayout.xml (get_iter) Add description of this PyGTK 2.6
	method.

	* pygtk-gtkcellview.xml (set_cell_data) Remove.

	* pygtk-gtkfilechooserbutton.xml (set_active, get_active, "active"):
	Remove.

2004-11-20  John Finlay  <finlay@moeraki.com>

	* pygtk_gtkdialog.xml (gtk.Dialog) Fix param list bug.

2004-11-18  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkliststore.xml (remove): Document return value differences.
	(Doug Quale)

2004-11-16  John Finlay  <finlay@moeraki.com>

	* pygtk2-ref.xml Set pubdate. Bump version number to 2.5.1

	* pygtk-gtkselectiondata.xml (gtk.target_list_add_image_targets)
	(gtk.target_list_add_text_targets)
	(gtk.target_list_add_uri_targets): Add descriptions.

	* pygtk-gtkaboutdialog.xml (gtk.about_dialog_set_email_hook)
	(gtk.about_dialog_set_url_hook): Add descriptions.
