@@ -5,7 +5,9 @@
 <book id="pygtk-reference" xmlns:xi="http://www.w3.org/2001/XInclude">
   <bookinfo>
     <pubdate>November 17, 2004</pubdate>
-    <title>PyGTK 2.0 Reference Manual v2.5.1</title>
+    <title>PyGTK 2.0 Reference Manual</title>
+    <edition>PyGTK Reference Manual version 2.5.1 for PyGTK 2.5.x</edition>
+    <releaseinfo>Version 2.5.1</releaseinfo>
     <authorgroup>
       <author>
 	<firstname>John</firstname>
@@ -16,6 +18,91 @@
       <para>This reference describes the classes of the Python PyGTK
 module.</para>
     </abstract>
+    <revhistory>
+      <revision>
+        <revnumber>2.5.0</revnumber>
+        <date>November 15, 2004</date>
+        <revremark>First release covering PyGTK 2.5.x</revremark>
+      </revision>
+      <revision>
+        <revnumber>2.4.11</revnumber>
+        <date>October 3, 2004</date>
+      </revision>
+      <revision>
+        <revnumber>2.4.10</revnumber>
+        <date>August 11, 2004</date>
+      </revision>
+      <revision>
+        <revnumber>2.4.9</revnumber>
+        <date>August 3, 2004</date>
+      </revision>
+      <revision>
+        <revnumber>2.4.8</revnumber>
+        <date>July 1, 2004</date>
+      </revision>
+      <revision>
+        <revnumber>2.4.7</revnumber>
+        <date>May 19, 2004</date>
+      </revision>
+      <revision>
+        <revnumber>2.4.6</revnumber>
+        <date>May 17, 2004</date>
+      </revision>
+      <revision>
+        <revnumber>2.4.4</revnumber>
+        <date>May 5, 2004</date>
+      </revision>
+      <revision>
+        <revnumber>2.4.2</revnumber>
+        <date>April 29, 2004</date>
+      </revision>
+      <revision>
+        <revnumber>2.4.0</revnumber>
+        <date>April 27, 2004</date>
+        <revremark>First release covering PyGTK 2.2 and 2.4</revremark>
+      </revision>
+      <revision>
+        <revnumber>1.9</revnumber>
+        <date>January 28, 2004</date>
+      </revision>
+      <revision>
+        <revnumber>1.8</revnumber>
+        <date>October 7, 2003</date>
+      </revision>
+      <revision>
+        <revnumber>1.7</revnumber>
+        <date>August 23, 2003</date>
+      </revision>
+      <revision>
+        <revnumber>1.6</revnumber>
+        <date>July 20, 2003</date>
+      </revision>
+      <revision>
+        <revnumber>1.5</revnumber>
+        <date>July 17, 2003</date>
+      </revision>
+      <revision>
+        <revnumber>1.4</revnumber>
+        <date>July 16, 2003</date>
+      </revision>
+      <revision>
+        <revnumber>1.3</revnumber>
+        <date>July 15, 2003</date>
+      </revision>
+      <revision>
+        <revnumber>1.2</revnumber>
+        <date>July 12, 2003</date>
+      </revision>
+      <revision>
+        <revnumber>1.1</revnumber>
+        <date>July 11, 2003</date>
+      </revision>
+      <revision>
+        <revnumber>1.0</revnumber>
+        <date>July 2, 2003</date>
+        <revremark>Frist release for PyGTK 2.0</revremark>
+      </revision>
+    </revhistory>
   </bookinfo>
   <toc>
   </toc>
