@@ -1,5 +1,8 @@
 2004-12-21  John Finlay  <finlay@moeraki.com>
 
+	* pygtk2-ref.xml Add revhistory, releaseinfo and edition tags.
+	Remove version number from title tag and add to releaseinfo tag.
+
 	* pygtk-gtktoolbar.xml (set_style) Add a note about ToolItem label
 	display when style is TOOLBAR_BOTH_HORIZ. (Gian Mario Tagliaretti)
 
